Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-104473

(Classic) Bluetooth discovery agents to clear previous errors

    XMLWordPrintable

Details

    • Android, Linux/X11, macOS, Windows
    • 8
    • 14db1fabef (qt/qtconnectivity/dev) ad61f0a17f (qt/qtconnectivity/6.4) f7bd238fcf (qt/tqtc-qtconnectivity/6.2) 3284614452 (qt/qtconnectivity/6.3) 3284614452 (qt/tqtc-qtconnectivity/6.3) ad61f0a17f (qt/tqtc-qtconnectivity/6.4)
    • Team A Foundation Sprint 60, Foundation Sprint 65, Foundation Sprint 66

    Description

      Bluetooth device- or service discovery may result in an error for a number of reasons.

      When the discovery is retried, the previous errors should be cleared. As an example if bluetooth was OFF the discovery will result in a PoweredOff error. Switching the bluetooth ON and redoing a successful discovery should clear the previous error. Otherwise the discoveryAgent::error() will return "PoweredOff" error even though everything was successful.

      This task is about fixing this on the applicable platforms (analysis of the impacted platforms is part of this item).

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            vuokko Juha Vuolle
            vuokko Juha Vuolle
            Vladimir Minenko Vladimir Minenko
            Votes:
            1 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews