src/bluetooth/qbluetoothdevicediscoveryagent.cpp
@@ -349,6 +349,8 @@ bool QBluetoothDeviceDiscoveryAgent::isActive() const
 
 /*!
     Returns the last error.
+
+    Any possible previous errors are cleared upon restarting the discovery.
 */
 QBluetoothDeviceDiscoveryAgent::Error QBluetoothDeviceDiscoveryAgent::error() const
 {
@@ -359,6 +361,8 @@ QBluetoothDeviceDiscoveryAgent::Error QBluetoothDeviceDiscoveryAgent::error() co
 
 /*!
     Returns a human-readable description of the last error.
+
+    \sa error(), errorOccurred()
 */
 QString QBluetoothDeviceDiscoveryAgent::errorString() const
 {
