src/bluetooth/qbluetoothdevicediscoveryagent_bluez.cpp
@@ -76,6 +76,8 @@ void QBluetoothDeviceDiscoveryAgentPrivate::start(QBluetoothDeviceDiscoveryAgent
         return;
     }
 
+    lastError = QBluetoothDeviceDiscoveryAgent::NoError;
+    errorString.clear();
     discoveredDevices.clear();
     devicesProperties.clear();
 
